--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -44,8 +44,7 @@ header {
 }
 
 .border--black {
-  border-top: solid black 2px;
-  border-bottom: outset black 2px;
+  border-top: solid grey 1px;
 }
 
 nav {
