--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 $first-color: #f1e5cf;
 $second-color: #bcbcbc;
 $third-color: whitesmoke;
+$fourth-color: #f1e1c2;
 $thefont-font-family: "Oswald", sans-serif;
 
 $fontweights: (
