--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -1,5 +1,5 @@
 .section__image {
-  border: solid black 1px;
+  border: solid $fourth-color 0.5px;
   width: 250px;
   animation-name: Zoomimg;
   animation-delay: 50ms;
